--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -37,6 +37,7 @@ h1 {
    font-size: 2rem;
    color: #fff;
    text-align: center;
+   padding-bottom: 25px;
 }
 
 .inputbox {
@@ -109,7 +110,7 @@ input:valid~label {
    text-decoration: underline;
 }
 
-button {
+.button {
    width: 100%;
    height: 40px;
    border-radius: 40px;
@@ -122,7 +123,7 @@ button {
    transition: all 0.4s ease;
 }
 
-button:hover {
+.button:hover {
    background-color: rgb(255, 255, 255, 0.5);
 }
 
