--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -41,7 +41,7 @@ h1 {
 
 .inputbox {
    position: relative;
-   margin: 30px 0;
+   margin: 25px 0;
    width: 450px;
    border-bottom: 2px solid #fff;
 }
@@ -51,7 +51,7 @@ h1 {
    top: 50%;
    left: 5px;
    transform: translateY(-50%);
-   color: #fff;
+   color: #f5efb4;
    font-size: 1rem;
    pointer-events: none;
    transition: all 0.1s ease-in-out;
@@ -59,12 +59,12 @@ h1 {
 
 input:focus~label,
 input:valid~label {
-   top: -5px;
+   top: -10px;
 }
 
 .inputbox input {
    width: 100%;
-   height: 40px;
+   height: 30px;
    background: transparent;
    border: none;
    outline: none;
@@ -109,7 +109,7 @@ input:valid~label {
    text-decoration: underline;
 }
 
-button {
+.button {
    width: 100%;
    height: 40px;
    border-radius: 40px;
@@ -117,12 +117,12 @@ button {
    border: none;
    outline: none;
    cursor: pointer;
-   font-size: 1rem;
+   font-size: 1.1rem;
    font-weight: 600;
    transition: all 0.4s ease;
 }
 
-button:hover {
+.button:hover {
    background-color: rgb(255, 255, 255, 0.5);
 }
 
